update logo alt

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="shop_header">
     <div class="shop_logo">
       <a href="./index.html">
-        <img src="./images/logo.png" alt="logo">
+        <img src="./images/logo.png" alt="test">
       </a>
     </div>
 
