--- a/index.html
+++ b/index.html
@@ -55,5 +55,24 @@
     <div class="clearfix"></div>
   </header>
 
+
+  <section>
+    <div class="cart">
+      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    </div>
+
+    <div class="cart">
+      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    </div>
+
+    <div class="cart">
+      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    </div>
+
+    <div class="cart">
+      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    </div>
+  </section>
+
 </body>
 </html>
