--- a/index.html
+++ b/index.html
@@ -53,24 +53,54 @@
     </nav>
 
     <div class="clearfix"></div>
+
+    <div class="banner"></div>
   </header>
 
 
   <section>
-    <div class="cart">
-      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+    <div class="head-section">
+      <h1>Shop home page</h1>
     </div>
 
-    <div class="cart">
-      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-    </div>
+    <div class="container">
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/mac.webp" alt="macbook">
+        </div>
 
-    <div class="cart">
-      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-    </div>
+        <div class="cart-body">
+          <h2>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
+          </h2>
+        </div>
+      </div>
 
-    <div class="cart">
-      <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/zenbook.webp" alt="macbook">
+        </div>
+
+        <div class="cart-body">
+          <h2>
+            <a href="#">ZenBook ipsum dolor sit amet consectetur.</a>
+          </h2>
+        </div>
+      </div>
+
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/hp.webp" alt="macbook">
+        </div>
+
+        <div class="cart-body">
+          <h2>
+            <a href="#">HP ipsum dolor sit amet consectetur.</a>
+          </h2>
+        </div>
+      </div>
+
+      <div class="clearfix"></div>
     </div>
   </section>
 
