--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="cart">
         <div class="cart-image">
-          <img src="./images/mac.webp" alt="macbook">
+          <img src="./images/hp.webp" alt="macbook">
         </div>
 
         <div class="cart-body">
