--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
           <h2>
             <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
           </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -83,8 +105,30 @@
 
         <div class="cart-body">
           <h2>
-            <a href="#">ZenBook ipsum dolor sit amet consectetur.</a>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
           </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -95,14 +139,213 @@
 
         <div class="cart-body">
           <h2>
-            <a href="#">HP ipsum dolor sit amet consectetur.</a>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
           </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/zenbook.webp" alt="macbook">
+        </div>
+
+        <div class="cart-body">
+          <h2>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
+          </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/hp.webp" alt="macbook">
+        </div>
+
+        <div class="cart-body">
+          <h2>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
+          </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/zenbook.webp" alt="macbook">
+        </div>
+
+        <div class="cart-body">
+          <h2>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
+          </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="cart">
+        <div class="cart-image">
+          <img src="./images/hp.webp" alt="macbook">
+        </div>
+
+        <div class="cart-body">
+          <h2>
+            <a href="#">MacBook ipsum dolor sit amet consectetur.</a>
+          </h2>
+
+          <div class="cart-info">
+            <div class="cart-price-info">
+              <div class="cart-price">
+                Price: <span>$5320</span> |
+                Count: <span>12</span>
+              </div>
+              <div class="cart-basket">
+                <a href="#">
+                  <i class="fa-solid fa-basket-shopping"></i>
+                </a>
+              </div>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="cart-categories">
+              <span>Categories:</span>
+              <a href="#" class="bg-blue">Electronics</a>
+              <a href="#" class="bg-red">Computers</a>
+              <a href="#" class="bg-orange">Tools</a>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="clearfix"></div>
     </div>
   </section>
+
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-links">
+        <h3>Categories</h3>
+        <ul>
+          <li><a href="#">Category 1</a></li>
+          <li><a href="#">Category 2</a></li>
+          <li><a href="#">Category 3</a></li>
+          <li><a href="#">Category 4</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-links">
+        <h3>About Company</h3>
+        <ul>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Sale</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-links">
+        <h3>Social Networks</h3>
+        <ul>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Telegram</a></li>
+        </ul>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+
+    <div class="copyright">
+      <span>Esim inch &copy; 2022</span>
+    </div>
+  </footer>
 
 </body>
 </html>
