--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul class="shop_main_menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
-        <li><a href="categories.html">Categories</a></li>
+        <li><a href="news.html">News</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
